Reorganized frontend files

--- a/frontend/ejs/index.ejs
+++ b/frontend/ejs/index.ejs
@@ -77,11 +77,9 @@
     <script src="iframeResizer.contentWindow.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="bundle.js"></script>
     <% if (dev) { %>
-        <script src="main.js"></script>
         <script src="http://localhost:9091"></script>
-    <% } else { %>
-        <script src="main.min.js"></script>
     <% } %>
 </body>
 </html>
