Centering now works

--- a/sentinel/countries/templates/index.html
+++ b/sentinel/countries/templates/index.html
@@ -96,8 +96,10 @@
                 </div>
             </div>
             <div id="row">
-                <div id="world-map" class="map">
+                <div class="col-sm-12">
+                    <div id="world-map" class="map">
 
+                    </div>
                 </div>
             </div>
         </div>
