--- a/sentinel/countries/templates/index.html
+++ b/sentinel/countries/templates/index.html
@@ -34,8 +34,8 @@
                 <li><a href="#map-the-gap" data-toggle="tab">Map the Gap</a>
                 </li>
                 <li><a href="#targets" data-toggle="tab">Targets</a></li>
-                <li><a href="#members" data-toggle="tab">Project Members</a>
-                </li>
+                <!-- <li><a href="#members" data-toggle="tab">Project Members</a>
+                </li> -->
             </ul>
             <div class="tab-content map-list">
                 <div role="tabpanel" class="tab-pane active" id="map-the-gap">
@@ -77,11 +77,13 @@
                             Year Olds: Needing Preventative Therapy</a></li>
                     </ul>
                 </div>
+                <!--
                 <div role="tabpanel" class="tab-pane" id="members">
                     <ul class="list-unstyled">
                         <li>Sentinel Project Members</li>
                     </ul>
                 </div>
+                -->
             </div>
             <div class="well hidden" id="country-info"></div>
         </div>
@@ -89,11 +91,12 @@
             <h3 id="map-title"></h3>
 
             <div id="row" class="clearfix">
-                <div id="legend" class="legend col-sm-6"></div>
-                <div id="country-dropdown" class="col-sm-5">
+                <div id="country-dropdown" class="col-sm-12">
                     <select name="country" id="country-select">
                     </select>
                 </div>
+                <div id="legend" class="legend col-sm-12"></div>
+
             </div>
             <div id="row">
                 <div class="col-sm-12">
