--- a/sentinel/countries/templates/index.html
+++ b/sentinel/countries/templates/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{% static "css/colorbrewer.css" %}"
           media="screen"
           charset="utf-8">
-    <link rel="stylesheet" href="{% static "css/style.css" %}" media="screen"
+    <link rel="stylesheet" href="{% static "css/style.css" %}?1" media="screen"
           charset="utf-8">
 </head>
 <body>
@@ -117,6 +117,6 @@
 <script src="{% static "iframeResizer.contentWindow.min.js" %}"></script>
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="{% static "bundle.js" %}"></script>
+<script src="{% static "bundle.js" %}?1"></script>
 </body>
 </html>
