Add default text for each chart

--- a/sentinel/countries/templates/index.html
+++ b/sentinel/countries/templates/index.html
@@ -87,6 +87,7 @@
                 -->
             </div>
             <div class="well hidden" id="country-info"></div>
+            <div class="well" id="default-info"></div>
         </div>
         <div id="loading" class="col-lg-6 col-lg-offset-1 col-sm-5 col-sm-offset-1"
                 style="padding-top: 40px;">
