--- a/sentinel/countries/templates/index.html
+++ b/sentinel/countries/templates/index.html
@@ -32,57 +32,30 @@
     <div class="row">
         <div class="col-lg-4 col-sm-5" id="side-menu">
             <ul class="nav nav-tabs">
-                <li><a href="#map-the-gap" data-toggle="tab">Map the Gap</a>
-                </li>
-                <li><a href="#targets" data-toggle="tab">Targets</a></li>
+                {% for group in chart_groups %}
+                    <li><a href="#{{ group.slug }}" data-toggle="tab">
+                        {{ group.title }}
+                    </a></li>
+                {% endfor %}
             </ul>
             <div class="tab-content map-list">
-                <div role="tabpanel" class="tab-pane active" id="map-the-gap">
-                    <ul class="list-unstyled">
-                        <li><a id="link-reported" href="#map/reported">Reported
-                            Cases</a></li>
-                        <li><a id="link-pub_mdr" href="#map/pub_mdr">Publication
-                            Documenting MDR-TB Cases</a></li>
-                        <li><a id="link-pub_xdr" href="#map/pub_xdr">Publication
-                            Documenting XDR-TB Cases</a></li>
-                        <li><a id="link-all_mdr" href="#map/all_mdr">All MDR-TB
-                            Data</a></li>
-                        <li><a id="link-all_xdr" href="#map/all_xdr">All XDR-TB
-                            Data</a></li>
-                    </ul>
-                </div>
-                <div role="tabpanel" class="tab-pane" id="targets">
-                    <ul class="list-unstyled">
-                        <li><a id="link-mdr_estimated_cases"
-                               href="#map/mdr_estimated_cases">Estimated
-                            MDR-TB Cases</a></li>
-                        <li><a id="link-mdr_eval_0" href="#map/mdr_eval_0">0-4
-                            Year
-                            Olds: Needing Evaluation</a></li>
-                        <li><a id="link-mdr_eval_5" href="#map/mdr_eval_5">5-14
-                            Year
-                            Olds: Needing Evaluation</a></li>
-                        <li><a id="link-mdr_treat_0" href="#map/mdr_treat_0">0-4
-                            Year
-                            Olds: Needing Treatment</a></li>
-                        <li><a id="link-mdr_treat_5" href="#map/mdr_treat_5">5-14
-                            Year
-                            Olds: Needing Treatment</a></li>
-                        <li><a id="link-mdr_therapy_0"
-                               href="#map/mdr_therapy_0">0-4
-                            Year Olds: Needing Preventative Therapy</a></li>
-                        <li><a id="link-mdr_therapy_5"
-                               href="#map/mdr_therapy_5">5-14
-                            Year Olds: Needing Preventative Therapy</a></li>
-                    </ul>
-                </div>
-                <!--
-                <div role="tabpanel" class="tab-pane" id="members">
-                    <ul class="list-unstyled">
-                        <li>Sentinel Project Members</li>
-                    </ul>
-                </div>
-                -->
+                {% for group in chart_groups %}
+                    <div role="tabpanel" class="tab-pane{% if forloop.first %} active{% endif %}" id="{{ group.slug }}">
+                        <ul class="list-unstyled">
+                            {% for chart in group.chart_set.all %}
+                                <li>
+                                    <a id="link-{{ chart.name }}" href="#map/{{ chart.name }}">
+                                        {% if chart.menu_title %}
+                                            {{ chart.menu_title }}
+                                        {% else %}
+                                            {{ chart.title }}
+                                        {% endif %}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endfor %}
             </div>
             <div class="well hidden" id="country-info"></div>
             <div class="well" id="default-info"></div>
