Fixed bug with updated charts
First chart in first group should always now show by default

--- a/sentinel/countries/templates/index.html
+++ b/sentinel/countries/templates/index.html
@@ -95,6 +95,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script>
     window.charts = {{ charts_json|safe }};
+    window.defaultChart = '{{ chart_groups.first.chart_set.first.name }}';
 </script>
 <script src="{% static "iframeResizer.contentWindow.min.js" %}"></script>
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
